buildscript {
    repositories {
        maven {
            url 'https://plugins.gradle.org/m2/'
        }
    }

    dependencies {
        classpath 'com.github.johnrengelman.shadow:com.github.johnrengelman.shadow.gradle.plugin:7.1.2'
    }
}

plugins {
    id 'com.github.johnrengelman.shadow' version '7.1.2'
    id 'com.adarshr.test-logger' version '3.2.0'
    id 'java'
    id 'jacoco'
    id 'checkstyle'
}

group 'udmis'
version '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

sourceSets {
    main {
        java {
            srcDirs '../gencode/java'
            srcDirs '../common/src/main/java'
        }
    }
    test {
        java {
            srcDirs '../common/src/test/java'
        }
    }
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        csv.required = false
        html.outputLocation = layout.BuildDirectory.dir('jacocoHtml')
    }
}

// TODO(future): jacocoTestCoverageVerification

checkstyle {
    ignoreFailures = false
    maxWarnings = 0
    configFile = file('../etc/checkstyle.xml')
}
checkstyleMain.source = 'src/main/java'

jar {
    manifest {
        attributes 'Main-Class': 'com.google.bos.udmi.service.pod.UdmiServicePod'
    }
}

shadowJar {
    mergeServiceFiles()
}

repositories {
    mavenCentral()
    mavenLocal()
    maven { url 'https://mvnrepository.com' }
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.4'
    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.11.0'
    implementation group: 'com.github.java-json-tools', name: 'json-schema-validator', version: '2.2.14'
    implementation 'commons-io:commons-io:2.5'

    implementation group: 'com.github.spullara.mustache.java', name: 'compiler', version: '0.9.10'

    implementation 'commons-cli:commons-cli:1.5.0'
    implementation 'com.google.guava:guava:30.1.1-jre'
    implementation 'com.google.cloud:google-cloud-logging:2.3.2'
    implementation ('com.google.apis:google-api-services-cloudiot:v1-rev20210323-1.31.0') {
      exclude group: 'com.google.guava', module: 'guava-jdk5'
    }

    implementation ('io.github.clearblade:clearblade-cloud-iot:1.0.5') {
      // Exclude transitive dependency causing problems with running unit tests in the IDE.
      exclude group: 'org.junit.jupiter', module: 'junit-jupiter-api'
    }

    implementation 'com.google.cloud:google-cloud-pubsub:1.66.0'
    implementation 'com.google.cloud:google-cloud-logging:3.14.9'
    implementation 'org.jetbrains:annotations:20.1.0'
    
    implementation 'org.bouncycastle:bcpkix-jdk15on:1.64'
    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
    implementation 'org.eclipse.paho:org.eclipse.paho.mqttv5.client:1.2.5'
    implementation 'io.etcd:jetcd-core:0.6.1'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
    testImplementation 'org.mockito:mockito-core:5.3.1'

    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.20.0'
    implementation 'com.google.apis:google-api-services-sheets:v4-rev484-1.20.0'
    implementation 'ch.qos.logback:logback-classic:1.5.6'
    implementation 'uk.org.lidalia:sysout-over-slf4j:1.0.2'
}
